# spify

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.example  README.md
cmake/: yaml-cpp-0.6.3.patch
example/: .gitignore  CMakeLists.txt  ExampleIFPInput.yml  README  appExampleIFP.cpp  generateExampleIFP.py  makeMaster.yml
include/spify/: map_param.h  param.h  parser.h  scalar_param.h  spify.h  vector_param.h
src/: CMakeLists.txt  SpifyParserGenerator.py  map_param.cpp  map_param.h  param.cpp  param.h  parser.cpp  scalar_param.cpp  scalar_param.h  spify.h  vector_param.cpp
test/: CMakeLists.txt  ComplexIFP.cpp  ComplexIFP.h  Simple00IFP.cpp  Simple00IFP.h  Simple01IFP.cpp  Simple01IFP.h  complexIFPMaster.yml  simple00IFPMaster.yml  testComplexIFP.cpp  testComplexIFP.yml  testSimple00IFP.cpp  testSimple00IFP.yml  testSimple01IFP.cpp  testSimple01IFP.yml
